Code : Added new changes

--- a/index.html
+++ b/index.html
@@ -14,47 +14,68 @@
 <body>
     <!-- start of container -->
     <div class="container">
+        <div class="containerTitle">
+            <h5 class="title">My Social Links</h5>
+        </div>
         <!-- start of top panel -->
-        <div class="profilePanel">
-            <img class="profileImg" height="100px" width="100px" src="img/profileImg.png">
-            <h6 class="profileName">Danish Hakim</h6>
-            <p id="profileJob" class="subtitle1">WEB & APP DEVELOPER</p>
-            <p id="profileLoc" class="subtitle1">Selangor, MY</p>
-            <p id="profileStatus" class="subtitle1">My Passion is about discovering something new!</p>
-            <!-- start of social buttons -->
-            <div class="socialButtons">
-                <!-- start of twitter button-->
-                <div class="clickButton" onclick="location.href='https://www.twitter.com/jerit3787';">
-                    <img height="20px" width="20px" src="https://img.icons8.com/android/24/000000/twitter.png " />
-                    <p id="buttonText" class="subtitle1">@jerit3787</p>
-                </div>
-                <!-- end of twitter button -->
-                <!-- start of github button -->
-                <div class="clickButton" onclick="location.href='https://www.github.com/jerit3787' ; ">
-                    <img height="20px" width="20px" src="https://img.icons8.com/fluent-systems-filled/24/000000/github.png " />
-                    <p id="buttonText" class="subtitle1">@jerit3787</p>
-                </div>
-                <!-- end of github button-->
-                <!-- start of email button-->
-                <div class="clickButton" onclick="location.href='mailto:danish.hakim@danishplace.tech' ; ">
-                    <img height="20px" width="20px" src="https://img.icons8.com/ios-filled/50/000000/apple-mail.png " />
-                    <p id="buttonText" class="subtitle1">danish.hakim@danishplace.tech</p>
-                </div>
-                <!-- end of email button -->
+        <div class="profilePanel" onclick="location.href='https://www.instagram.com/fly._over';">
+            <div class="instagramHeader">
+                <img class="instagramLogo" src="img/instagram.png">
             </div>
-            <!-- end of social buttons-->
+            <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/insta_profile.jpg">
+                <div class="profileInfomation">
+                    <h6 class="profileName">Danish Hakim</h6>
+                    <h6 id="profileLoc">@fly._over</h6>
+                    <p id="profileStatus" class="subtitle1">achieving what others can't do <br> insyaAllah your software engineer <br>sagacious 34' / luminuex 39'
+                    </p>
+                    <!-- start of social buttons -->
+                    <div class="socialButtons">
+                        <h6 style="margin:0" id="numberTitle">18</h6>
+                        <p id="numberSubtitle">posts</p>
+                        <h6 id="numberTitle">454</h6>
+                        <p id="numberSubtitle">followers</p>
+                        <h6 id="numberTitle">515</h6>
+                        <p id="numberSubtitle">following</p>
+                    </div>
+                    <!-- end of social buttons-->
+                </div>
+            </div>
+        </div>
+        <!-- end of top panel button-->
+        <!-- start of top panel -->
+        <div class="profilePanel" onclick="location.href='https://www.twitter.com/danishhaki_04';">
+            <div class="instagramHeader" id="twitter">
+                <img class="instagramLogo" id="twitter" height="30px" src="img/twitter.png">
+            </div>
+            <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/twitter_profile.jpg">
+                <div class="profileInfomation">
+                    <h6 class="profileName">keqing</h6>
+                    <h6 id="profileLoc">@danishhaki_04</h6>
+                    <p id="profileStatus" class="subtitle1">active on snapchat</p>
+                    <!-- start of social buttons -->
+                    <div class="socialButtons">
+                        <h6 style="margin:0" id="numberTitle">354</h6>
+                        <p id="numberSubtitle">tweets</p>
+                        <h6 id="numberTitle">98</h6>
+                        <p id="numberSubtitle">following</p>
+                        <h6 id="numberTitle">38</h6>
+                        <p id="numberSubtitle">followers</p>
+                    </div>
+                    <!-- end of social buttons-->
+                </div>
+            </div>
         </div>
         <!-- end of top panel button-->
         <!-- start of panel 1 -->
-        <div class="linkButton" onclick="location.href='https://jerit3787.github.io' ; ">
-            <img height="30px" width="30px" src="https://img.icons8.com/ios-filled/50/000000/portfolio.png " />
-            <h6 class="buttonText">Portfolio</h6>
+        <div class=" linkButton " onclick="location.href='https://jerit3787.github.io' ; ">
+            <img height="30px " width="30px " src="https://img.icons8.com/ios-filled/50/000000/portfolio.png " />
+            <h6 class="buttonText ">Portfolio</h6>
         </div>
         <!-- end of panel 1 -->
         <!-- start of panel 2 -->
-        <div class="linkButton" onclick="location.href='https://jerit3787.github.io/projects' ; ">
-            <img height="30px" width="30px" src="https://img.icons8.com/material-sharp/24/000000/group-of-projects.png " />
-            <h6 class="buttonText">My projects</h6>
+        <div class="linkButton " onclick="location.href='https://jerit3787.github.io/projects' ; ">
+            <img height="30px " width="30px " src="https://img.icons8.com/material-sharp/24/000000/group-of-projects.png " />
+            <h6 class="buttonText ">My projects</h6>
         </div>
         <!-- end of panel 2 -->
     </div>
