Files : Updated Instagram logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- start of top panel -->
         <div class="profilePanel" onclick="location.href='https://www.instagram.com/fly._over';">
             <div class="instagramHeader">
-                <img class="instagramLogo" src="img/instagram.png">
+                <img class="instagramLogo" height="40px" src="img/instagram.png">
             </div>
             <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/insta_profile.jpg">
                 <div class="profileInfomation">
@@ -73,7 +73,7 @@
         </div>
         <!-- end of panel 1 -->
         <!-- start of panel 2 -->
-        <div class="linkButton " onclick="location.href='https://jerit3787.github.io/projects' ; ">
+        <div class="linkButton" onclick="location.href='https://jerit3787.github.io/projects' ; ">
             <img height="30px " width="30px " src="https://img.icons8.com/material-sharp/24/000000/group-of-projects.png " />
             <h6 class="buttonText ">My projects</h6>
         </div>
