Content : Updated links and username

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         </div>
         <!-- end of top panel button-->
         <!-- start of top panel -->
-        <div class="profilePanel" onclick="location.href='https://www.twitter.com/danishhaki_04';">
+        <div class="profilePanel" onclick="location.href='https://www.twitter.com/dnshzel';">
             <div class="instagramHeader" id="twitter">
                 <img class="instagramLogo" id="twitter" height="30px" src="img/twitter.png">
             </div>
             <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/twitter_profile.jpg">
                 <div class="profileInfomation">
                     <h6 class="profileName">keqing</h6>
-                    <h6 id="profileLoc">@danishhaki_04</h6>
+                    <h6 id="profileLoc">@dnshzel/h6>
                     <p id="profileStatus" class="subtitle1">active on snapchat</p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
@@ -58,7 +58,7 @@
                         <p id="numberSubtitle">tweets</p>
                         <h6 id="numberTitle">98</h6>
                         <p id="numberSubtitle">following</p>
-                        <h6 id="numberTitle">38</h6>
+                        <h6 id="numberTitle">39</h6>
                         <p id="numberSubtitle">followers</p>
                     </div>
                     <!-- end of social buttons-->
