Content : Fixed wrongly added tags

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/twitter_profile.jpg">
                 <div class="profileInfomation">
                     <h6 class="profileName">keqing</h6>
-                    <h6 id="profileLoc">@dnshzel/h6>
+                    <h6 id="profileLoc">@dnshzel</h6>
                     <p id="profileStatus" class="subtitle1">active on snapchat</p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
