Code : Multiple Changes - Replaced icons with material-icons instead - Added new anonymous message link - Updated social infomations - Improvised comments on code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="fonts/font-styles.css" rel="stylesheet">
     <link href="fonts/font-Poppins.css" rel="stylesheet">
     <link href="fonts/font-OpenSans.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <!-- start of body tag -->
@@ -17,7 +18,7 @@
         <div class="containerTitle">
             <h5 class="title">My Social Links</h5>
         </div>
-        <!-- start of top panel -->
+        <!-- start of panel 1 -->
         <div class="profilePanel" onclick="location.href='https://www.instagram.com/fly._over';">
             <div class="instagramHeader">
                 <img class="instagramLogo" height="40px" src="img/instagram.png">
@@ -32,17 +33,17 @@
                     <div class="socialButtons">
                         <h6 style="margin:0" id="numberTitle">18</h6>
                         <p id="numberSubtitle">posts</p>
-                        <h6 id="numberTitle">458</h6>
+                        <h6 id="numberTitle">474</h6>
                         <p id="numberSubtitle">followers</p>
-                        <h6 id="numberTitle">521</h6>
+                        <h6 id="numberTitle">525</h6>
                         <p id="numberSubtitle">following</p>
                     </div>
                     <!-- end of social buttons-->
                 </div>
             </div>
         </div>
-        <!-- end of top panel button-->
-        <!-- start of top panel -->
+        <!-- end of panel 1-->
+        <!-- start of panel 2 -->
         <div class="profilePanel" onclick="location.href='https://www.twitter.com/dnshzel';">
             <div class="instagramHeader" id="twitter">
                 <img class="instagramLogo" id="twitter" height="30px" src="img/twitter.png">
@@ -54,30 +55,36 @@
                     <p id="profileStatus" class="subtitle1">active on snapchat</p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
-                        <h6 style="margin:0" id="numberTitle">394</h6>
+                        <h6 style="margin:0" id="numberTitle">405</h6>
                         <p id="numberSubtitle">tweets</p>
                         <h6 id="numberTitle">98</h6>
                         <p id="numberSubtitle">following</p>
-                        <h6 id="numberTitle">39</h6>
+                        <h6 id="numberTitle">42</h6>
                         <p id="numberSubtitle">followers</p>
                     </div>
                     <!-- end of social buttons-->
                 </div>
             </div>
         </div>
-        <!-- end of top panel button-->
-        <!-- start of panel 1 -->
+        <!-- end of panel 2-->
+        <!-- start of panel 3 -->
+        <div class="linkButton" onclick="location.href='https://gdpd.xyz/dnshzel' ; ">
+            <span class="material-icons">message</span>
+            <h6 class="buttonText ">Send a anonymous message</h6>
+        </div>
+        <!-- end of panel 3 -->
+        <!-- start of panel 4 -->
         <div class=" linkButton " onclick="location.href='https://jerit3787.github.io' ; ">
-            <img height="30px " width="30px " src="https://img.icons8.com/ios-filled/50/000000/portfolio.png " />
+            <span class="material-icons">contact_page</span>
             <h6 class="buttonText ">Portfolio</h6>
         </div>
-        <!-- end of panel 1 -->
-        <!-- start of panel 2 -->
+        <!-- end of panel 4 -->
+        <!-- start of panel 5 -->
         <div class="linkButton" onclick="location.href='https://jerit3787.github.io/projects' ; ">
-            <img height="30px " width="30px " src="https://img.icons8.com/material-sharp/24/000000/group-of-projects.png " />
+            <span class="material-icons">switch_account</span>
             <h6 class="buttonText ">My projects</h6>
         </div>
-        <!-- end of panel 2 -->
+        <!-- end of panel 5 -->
     </div>
     <!-- end of container -->
 </body>
