--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="profileInfomation">
                     <h6 class="profileName">keqing</h6>
                     <h6 id="profileLoc">@dnshzel</h6>
-                    <p id="profileStatus" class="subtitle1">active on snapchat</p>
+                    <p id="profileStatus" class="subtitle1">I'll wait</p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
                         <h6 style="margin:0" id="numberTitle">405</h6>
@@ -70,7 +70,7 @@
         <!-- start of panel 3 -->
         <div class="linkButton" onclick="location.href='https://gdpd.xyz/dnshzel' ; ">
             <span class="material-icons">message</span>
-            <h6 class="buttonText ">Send a anonymous message</h6>
+            <h6 class="buttonText ">Send an anonymous message</h6>
         </div>
         <!-- end of panel 3 -->
         <!-- start of panel 4 -->
