Content : Updated instagram links & username plus content

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
             <h5 class="title">My Social Links</h5>
         </div>
         <!-- start of panel 1 -->
-        <div class="profilePanel" onclick="location.href='https://www.instagram.com/fly._over';">
+        <div class="profilePanel" onclick="location.href='https://www.instagram.com/dnshzel';">
             <div class="instagramHeader">
                 <img class="instagramLogo" height="40px" src="img/instagram.png">
             </div>
             <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/insta_profile.jpg">
                 <div class="profileInfomation">
                     <h6 class="profileName">Danish Hakim</h6>
-                    <h6 id="profileLoc">@fly._over</h6>
+                    <h6 id="profileLoc">@dnshzel</h6>
                     <p id="profileStatus" class="subtitle1">achieving what others can't do <br> insyaAllah your software engineer <br>sagacious 34' / luminuex 39'
                     </p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
                         <h6 style="margin:0" id="numberTitle">18</h6>
                         <p id="numberSubtitle">posts</p>
-                        <h6 id="numberTitle">474</h6>
+                        <h6 id="numberTitle">475</h6>
                         <p id="numberSubtitle">followers</p>
-                        <h6 id="numberTitle">525</h6>
+                        <h6 id="numberTitle">531</h6>
                         <p id="numberSubtitle">following</p>
                     </div>
                     <!-- end of social buttons-->
@@ -55,11 +55,11 @@
                     <p id="profileStatus" class="subtitle1">active on snapchat</p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
-                        <h6 style="margin:0" id="numberTitle">405</h6>
+                        <h6 style="margin:0" id="numberTitle">432</h6>
                         <p id="numberSubtitle">tweets</p>
-                        <h6 id="numberTitle">98</h6>
+                        <h6 id="numberTitle">101</h6>
                         <p id="numberSubtitle">following</p>
-                        <h6 id="numberTitle">42</h6>
+                        <h6 id="numberTitle">43</h6>
                         <p id="numberSubtitle">followers</p>
                     </div>
                     <!-- end of social buttons-->
