Code : Updated links for anonymous message

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         </div>
         <!-- end of panel 2-->
         <!-- start of panel 3 -->
-        <div class="linkButton" onclick="location.href='https://gdpd.xyz/dnshzel' ; ">
+        <div class="linkButton" onclick="location.href='https://ngl.link/dnshzel' ; ">
             <span class="material-icons">message</span>
-            <h6 class="buttonText ">Send an anonymous message</h6>
+            <h6 class="buttonText ">Send an ngl.link message</h6>
         </div>
         <!-- end of panel 3 -->
         <!-- start of panel 4 -->
