Content : Update information for social media

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     </p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
-                        <h6 style="margin:0" id="numberTitle">18</h6>
+                        <h6 style="margin:0" id="numberTitle">12</h6>
                         <p id="numberSubtitle">posts</p>
-                        <h6 id="numberTitle">475</h6>
+                        <h6 id="numberTitle">476</h6>
                         <p id="numberSubtitle">followers</p>
-                        <h6 id="numberTitle">531</h6>
+                        <h6 id="numberTitle">507</h6>
                         <p id="numberSubtitle">following</p>
                     </div>
                     <!-- end of social buttons-->
@@ -52,14 +52,14 @@
                 <div class="profileInfomation">
                     <h6 class="profileName">keqing</h6>
                     <h6 id="profileLoc">@dnshzel</h6>
-                    <p id="profileStatus" class="subtitle1">I'll wait</p>
+                    <p id="profileStatus" class="subtitle1">I tried to be strong at time i don't feel like it</p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
-                        <h6 style="margin:0" id="numberTitle">432</h6>
+                        <h6 style="margin:0" id="numberTitle">482</h6>
                         <p id="numberSubtitle">tweets</p>
-                        <h6 id="numberTitle">101</h6>
+                        <h6 id="numberTitle">102</h6>
                         <p id="numberSubtitle">following</p>
-                        <h6 id="numberTitle">43</h6>
+                        <h6 id="numberTitle">50</h6>
                         <p id="numberSubtitle">followers</p>
                     </div>
                     <!-- end of social buttons-->
