Docs: Updated page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height">
-    <title>Jerit3787</title>
+    <title>Danish Hakim - @dnshzel</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="fonts/font-styles.css" rel="stylesheet">
     <link href="fonts/font-Poppins.css" rel="stylesheet">
