Code: remove old data and add dynamic links

--- a/index.html
+++ b/index.html
@@ -30,23 +30,22 @@
         </div>
         
         <!-- start of panel 1 -->
-        <div class="profilePanel" onclick="location.href='https://www.instagram.com/dnshzel';">
+        <div class="profilePanel">
             <div class="instagramHeader">
                 <i class="fab fa-instagram"></i>
             </div>
-            <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/insta_profile.jpg" alt="Instagram Profile">
+            <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="" alt="Instagram Profile">
                 <div class="profileInfomation">
-                    <h6 class="profileName">Danish Hakim</h6>
-                    <h6 id="profileLoc">@dnshzel</h6>
-                    <p id="profileStatus" class="subtitle1">achieving what others can't do <br> insyaAllah your software engineer <br>sagacious 34' / luminuex 39'
-                    </p>
+                    <h6 class="profileName"></h6>
+                    <h6 id="profileLoc"></h6>
+                    <p id="profileStatus" class="subtitle1"></p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
-                        <h6 style="margin:0" id="numberTitle">12</h6>
+                        <h6 style="margin:0" id="numberTitle"></h6>
                         <p id="numberSubtitle">posts</p>
-                        <h6 id="numberTitle">534</h6>
+                        <h6 id="numberTitle"></h6>
                         <p id="numberSubtitle">followers</p>
-                        <h6 id="numberTitle">582</h6>
+                        <h6 id="numberTitle"></h6>
                         <p id="numberSubtitle">following</p>
                     </div>
                     <!-- end of social buttons-->
@@ -59,22 +58,22 @@
         <!-- end of panel 1-->
         
         <!-- start of panel 2 -->
-        <div class="profilePanel" onclick="location.href='https://www.twitter.com/dnshzel';">
+        <div class="profilePanel">
             <div class="instagramHeader twitter-header">
                 <i class="fab fa-twitter"></i>
             </div>
-            <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="img/twitter_profile.jpg" alt="Twitter Profile">
+            <div class="profileWidget"><img class="profileImg" height="100px" width="100px" src="" alt="Twitter Profile">
                 <div class="profileInfomation">
-                    <h6 class="profileName">keqing</h6>
-                    <h6 id="profileLoc">@dnshzel</h6>
-                    <p id="profileStatus" class="subtitle1">I tried to be strong at time i don't feel like it</p>
+                    <h6 class="profileName"></h6>
+                    <h6 id="profileLoc"></h6>
+                    <p id="profileStatus" class="subtitle1"></p>
                     <!-- start of social buttons -->
                     <div class="socialButtons">
-                        <h6 style="margin:0" id="numberTitle">576</h6>
+                        <h6 style="margin:0" id="numberTitle"></h6>
                         <p id="numberSubtitle">tweets</p>
-                        <h6 id="numberTitle">96</h6>
+                        <h6 id="numberTitle"></h6>
                         <p id="numberSubtitle">following</p>
-                        <h6 id="numberTitle">55</h6>
+                        <h6 id="numberTitle"></h6>
                         <p id="numberSubtitle">followers</p>
                     </div>
                     <!-- end of social buttons-->
